# chrome-bookmarks.py

./: .travis.yml  README.md  setup.cfg  setup.py
chrome_bookmarks/: __init__.py
tests/chrome-bookmarks/examples/: test.py
tests/examples/: test.py
