# https://pypi.org/project/setupcfg-generator/
[metadata]
name = chrome-bookmarks
version = 2019.10.8
url = https://github.com/looking-for-a-job/chrome-bookmarks.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Google Chrome bookmarks

[options]
install_requires = 
	public
	setuptools
packages = 
	chrome_bookmarks
